<resources>
    <string name="app_name">Depth of Field Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_lens">Add/Edit Lens</string>
    <string name="title_activity_calc_lens">Calculate Depth of Field</string>
    <string name="txt_hfd">Hyperfocal Distance:</string>
    <string name="txt_dof">Depth of Field:</string>
    <string name="txt_ffd">Far Focal Distance:</string>
    <string name="txt_nfd">Near Focal Distance:</string>
    <string name="txt_enterallvalues">Enter all values</string>
    <string name="txt_photodetails">Photo details with:</string>
    <string name="txt_COF">Circle of Confusion [m]</string>
    <string name="txt_DOS">Distance to subject [m]</string>
    <string name="txt_SA">Selected Aperture</string>
    <string name="txt_COCsample">ex: 0.029</string>
    <string name="txt_DOSsample">ex: 1.5 for 1.5m</string>
    <string name="txt_SAsample">ex: 2.8 for F2.8</string>
    <string name="txt_calculate">Calculate</string>
    <string name="txt_Cancel">Cancel</string>
    <string name="txt_emptyList">Add a lens using the + button to populate the list</string>
    <string name="txt_select">Select a lens to use:</string>
    <string name="txt_OptionalData">Optional Implementations\n3.2) Edit/ Delete\n3.3) Error Checking\n3.7) Empty State</string>
    <string name="txt_EmptyMake">Error: Make is empty. Please input the make of the lens</string>
    <string name="txt_FocalError">Please input a focal length greater than 0</string>
    <string name="txt_ApertureError">Please input a aperture value greater than 1.4</string>
    <string name="txt_ErrorCOC">Error: Input a Circle of Confusion greater than 0</string>
    <string name="txt_ErrorDistance">Error: Please input a Distance greater than 0</string>
    <string name="txt_ErrorSA">Error: Please input a selected aperture greater than 1.4</string>
</resources>
